# go-svelte-sample

./: .gitignore  README.md  WORKSPACE  package.json
src/client/: App.svelte  BUILD.bazel  closure-config.json  main.js
src/server/: BUILD.bazel  main.go
src/server/static/: BUILD.bazel  index.html
