package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_svelte//:defs.bzl", "bundle_prod", "svelte")

svelte(
    name = "App",
    srcs = ["main.js"],
    entry_point = "App.svelte",
)

bundle_prod(
    name = "bundle_prod_closure",
    entry_point = "main.js",
    closure_config = ":closure-config.json",
    deps = [
        ":App",
        "@npm//rxjs",
    ],
)

bundle_prod(
    name = "bundle_prod_rollup",
    entry_point = "main.js",
    deps = [
        ":App",
        "@npm//rxjs",
    ],
)